@@ -437,6 +437,10 @@ name|queryFile
 decl_stmt|;
 specifier|private
 name|String
+name|excludeQueryFile
+decl_stmt|;
+specifier|private
+name|String
 name|queryFileRegex
 decl_stmt|;
 specifier|private
@@ -802,6 +806,30 @@ return|;
 block|}
 specifier|public
 name|void
+name|setExcludeQueryFile
+parameter_list|(
+name|String
+name|excludeQueryFile
+parameter_list|)
+block|{
+name|this
+operator|.
+name|excludeQueryFile
+operator|=
+name|excludeQueryFile
+expr_stmt|;
+block|}
+specifier|public
+name|String
+name|getExcludeQueryFile
+parameter_list|()
+block|{
+return|return
+name|excludeQueryFile
+return|;
+block|}
+specifier|public
+name|void
 name|setQueryFileRegex
 parameter_list|(
 name|String
@@ -1120,6 +1148,72 @@ argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+if|if
+condition|(
+name|excludeQueryFile
+operator|!=
+literal|null
+operator|&&
+operator|!
+name|excludeQueryFile
+operator|.
+name|equals
+argument_list|(
+literal|""
+argument_list|)
+condition|)
+block|{
+comment|// Exclude specified query files, comma separated
+for|for
+control|(
+name|String
+name|qFile
+range|:
+name|excludeQueryFile
+operator|.
+name|split
+argument_list|(
+literal|","
+argument_list|)
+control|)
+block|{
+if|if
+condition|(
+literal|null
+operator|!=
+name|inpDir
+condition|)
+block|{
+name|qFiles
+operator|.
+name|remove
+argument_list|(
+operator|new
+name|File
+argument_list|(
+name|inpDir
+argument_list|,
+name|qFile
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|qFiles
+operator|.
+name|remove
+argument_list|(
+operator|new
+name|File
+argument_list|(
+name|qFile
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 name|Collections
 operator|.
