@@ -1446,47 +1446,90 @@ specifier|public
 name|void
 name|initConf
 parameter_list|()
+throws|throws
+name|Exception
 block|{
 if|if
 condition|(
 name|miniMr
 condition|)
 block|{
-name|String
-name|fsName
-init|=
-name|conf
-operator|.
-name|get
-argument_list|(
-literal|"fs.default.name"
-argument_list|)
-decl_stmt|;
 assert|assert
-name|fsName
+name|dfs
 operator|!=
 literal|null
 assert|;
-comment|// hive.metastore.warehouse.dir needs to be set relative to the jobtracker
+assert|assert
+name|mr
+operator|!=
+literal|null
+assert|;
+comment|// set fs.default.name to the uri of mini-dfs
 name|conf
 operator|.
-name|set
+name|setVar
 argument_list|(
-literal|"hive.metastore.warehouse.dir"
-argument_list|,
-name|fsName
+name|HiveConf
 operator|.
-name|concat
+name|ConfVars
+operator|.
+name|HADOOPFS
+argument_list|,
+name|dfs
+operator|.
+name|getFileSystem
+argument_list|()
+operator|.
+name|getUri
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// hive.metastore.warehouse.dir needs to be set relative to the mini-dfs
+name|conf
+operator|.
+name|setVar
 argument_list|(
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|METASTOREWAREHOUSE
+argument_list|,
+operator|(
+operator|new
+name|Path
+argument_list|(
+name|dfs
+operator|.
+name|getFileSystem
+argument_list|()
+operator|.
+name|getUri
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+argument_list|,
 literal|"/build/ql/test/data/warehouse/"
 argument_list|)
+operator|)
+operator|.
+name|toString
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|conf
 operator|.
-name|set
+name|setVar
 argument_list|(
-literal|"mapred.job.tracker"
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HADOOPJT
 argument_list|,
 literal|"localhost:"
 operator|+
@@ -2142,22 +2185,6 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-name|String
-name|warehousePath
-init|=
-operator|(
-operator|(
-operator|new
-name|URI
-argument_list|(
-name|testWarehouse
-argument_list|)
-operator|)
-operator|.
-name|getPath
-argument_list|()
-operator|)
-decl_stmt|;
 comment|// Drop any tables that remain due to unsuccessful runs
 for|for
 control|(
@@ -2218,30 +2245,75 @@ name|s
 argument_list|)
 expr_stmt|;
 block|}
+comment|// delete any contents in the warehouse dir
+name|Path
+name|p
+init|=
+operator|new
+name|Path
+argument_list|(
+name|testWarehouse
+argument_list|)
+decl_stmt|;
+name|FileSystem
+name|fs
+init|=
+name|p
+operator|.
+name|getFileSystem
+argument_list|(
+name|conf
+argument_list|)
+decl_stmt|;
+name|FileStatus
+index|[]
+name|ls
+init|=
+name|fs
+operator|.
+name|listStatus
+argument_list|(
+name|p
+argument_list|)
+decl_stmt|;
 for|for
 control|(
-name|String
-name|s
-range|:
-operator|new
-name|String
-index|[]
-block|{
-literal|"dest4.out"
-block|,
-literal|"union.out"
-block|}
+name|int
+name|i
+init|=
+literal|0
+init|;
+operator|(
+name|ls
+operator|!=
+literal|null
+operator|)
+operator|&&
+operator|(
+name|i
+operator|<
+name|ls
+operator|.
+name|length
+operator|)
+condition|;
+name|i
+operator|++
 control|)
 block|{
-name|deleteDirectory
+name|fs
+operator|.
+name|delete
 argument_list|(
-operator|new
-name|File
-argument_list|(
-name|warehousePath
+name|ls
+index|[
+name|i
+index|]
+operator|.
+name|getPath
+argument_list|()
 argument_list|,
-name|s
-argument_list|)
+literal|true
 argument_list|)
 expr_stmt|;
 block|}
@@ -3294,8 +3366,6 @@ name|Exception
 block|{
 if|if
 condition|(
-name|miniMr
-operator|||
 name|recreate
 condition|)
 block|{
@@ -4845,6 +4915,10 @@ block|,
 literal|"-I"
 block|,
 literal|"pfile:"
+block|,
+literal|"-I"
+block|,
+literal|"hdfs:"
 block|,
 literal|"-I"
 block|,
